# echo

./: .gitignore  COLLABORATORS.md  README.md  index.html
blog/: echo-cheap-routing-without-a-router.md  echo-results-so-far.html  echo-results-so-far.md
experiment/: README.md  chat_claude_code.py  cost_units.py  dataset.py  pyproject.toml  run_pilot.py
experiment/benchmarks/: __init__.py  bbh.py  bbh_arms.py  mmlu_pro.py
experiment/results/: 20260517T021334Z_n50.jsonl  20260517T112818Z_n64.jsonl  20260518T011927Z_n64.jsonl  20260519T085620Z_n64.jsonl  20260603T022037Z_bbh_n10.jsonl  20260604T011133Z_bbh_n15.jsonl  20260611T133324Z_bbh_n16.jsonl  20260611T230804Z_bbh_n15.jsonl  20260613T051627Z_bbh_n30.jsonl  20260625T013951Z_bbh_n30.jsonl  20260625_bbh_n30_claude_baseline_SUMMARY.md  20260630T232105Z_bbh_n30.jsonl  20260701T000922Z_bbh_n99.jsonl  20260701T050041Z_bbh_n99.jsonl  20260701T221948Z_n64.jsonl  README.md
experiment/scripts/: RUN_FOR_NICK.md  analyze_sweep.py  gen_progress.py  inspect_bbh.py  inspect_mmlu_pro.py  publish_progress.sh  repro_sonnet_unparse.py  run_bbh_pilot.py  run_bbh_resumable.sh  run_mmlu_pro_pilot.py  run_mmlu_pro_resumable.sh  validate_harness.py
experiment/tests/: test_bbh_arms.py  test_bbh_scoring.py  test_cost_units.py  test_mmlu_pro_scoring.py
