[project]
name = "echo-experiment"
version = "0.0.1"
description = "Self-consistency routing experiments for the Echo paper"
requires-python = ">=3.11"
dependencies = [
  "langchain-core>=0.3,<0.4",
  "langchain>=0.3,<0.4",
  "langchain-ollama>=0.2,<0.4",
  "datasets>=2.14",
  "langchain-openai>=0.3",
]
